FTBFS with GCC 13

Fails due to:

[  261s] In file included from demux/dash/mpd/TemplatedUri.cpp:22:
[  261s] ../config.h:907: warning: "_FORTIFY_SOURCE" redefined
[  261s]   907 | #define _FORTIFY_SOURCE 2
[  261s]       | 
[  261s] <command-line>: note: this is the location of the previous definition
[  261s] In file included from demux/dash/mpd/TemplatedUri.cpp:25:
[  261s] demux/dash/mpd/TemplatedUri.hpp:56:25: error: 'uint64_t' does not name a type
[  261s]    56 |                         uint64_t value;
[  261s]       |                         ^~~~~~~~

as mentioned here: https://gcc.gnu.org/gcc-13/porting_to.html#header-dep-changes