demux: dash: include cstdint, needed for uint64_t

Fixes #27077.

(cherry picked from commit 6fca76ebd76bf8fce9b111e31bda64015cdc770f)